Update CrashDetector.java